--- a/WpfVisionTest/MainWindow.xaml
+++ b/WpfVisionTest/MainWindow.xaml
@@ -1,20 +1,20 @@
 ﻿<Window
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfVisionTest"
-        xmlns:BlobFindTool="clr-namespace:WpfVisionTest.BlobFindTool" x:Class="WpfVisionTest.MainWindow"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <StackPanel>
-            <BlobFindTool:UserControlBlobFindTool>
-                <BlobFindTool:UserControlBlobFindTool.DataContext>
-                    <BlobFindTool:UserControlBlobFindTool />
-                </BlobFindTool:UserControlBlobFindTool.DataContext>
-            </BlobFindTool:UserControlBlobFindTool>
-        </StackPanel>
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:WpfVisionTest"
+    xmlns:BlobFindTool="clr-namespace:WpfVisionTest.BlobFindTool"
+    x:Class="WpfVisionTest.MainWindow"
+    mc:Ignorable="d"
+    Title="MainWindow" Height="600" Width="900">
 
-    </Grid>
+    <Window.DataContext>
+        <BlobFindTool:UserControlBlobFindToolViewModel />
+    </Window.DataContext>
+
+    <DockPanel>
+        <!-- 使用DockPanel.Dock属性将UserControlBlobFindTool放置在顶部并自动调整大小 -->
+        <BlobFindTool:_BlobFindTool DockPanel.Dock="Top" />
+    </DockPanel>
 </Window>
